tests/NormalTests/paczka1/fuzzy1/45371894.err
Error in line 1: WLUphpO S174 94,2
Error in line 6: 3lTX1Gm6EX S174 27,3
Error in line 11: A515 S174 328,15
Error in line 12: jqnG S174 83,3
Error in line 10: A515 S174 94,4
Error in line 25: A515 A515 81,9
Error in line 26: JOyygKut S526 9,9
Error in line 28: 3lTX1Gm6EX S174 45,1
Error in line 34: A515 S526 6,46
Error in line 33: 3lTX1Gm6EX A515 71,7
Error in line 27: A515 S526 13,8
